--- a/MyShop/MyShop.WebUI/Web.config
+++ b/MyShop/MyShop.WebUI/Web.config
@@ -11,8 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MyShop.WebUI-20200322030017.mdf;Initial Catalog=aspnet-MyShop.WebUI-20200322030017;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=localhost;Initial Catalog=MyShop;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
